crates/etas_tests/fixtures/compiler/projects/negative/dependency_alias_nominal_types/src/app/main.es
module app.main;

import app.consumer.{run};

flow main(args: Array<string>) -> i32
{
    return run();
}
